# Build-ESP32-Smail-GUI-OS

./: .gitignore  CMakeLists.txt  ESP32_DEPLOYMENT_GUIDE.md  ESP32_SMALL_OS_GUIDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_COMPLETE.md  README.md  SIMULATION_SPEC.md  SIMULATION_TEST_REPORT.md  bash.exe.stackdump  build_desktop.bat  build_desktop.ps1  build_desktop_qt6.bat  build_esp32.bat  build_esp32.sh  build_ninja_ucrt.bat  esp32_targets.mk  partitions.csv  sdkconfig.defaults  verify_esp32_build.sh
.kiro/specs/esp32-virtual-sim/: .config.kiro  requirements.md
DesktopApp/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md
DesktopApp/include/: application.h  simulation_engine.h
DesktopApp/include/core/: elf_loader_wrapper.h
DesktopApp/include/debug/: debug_controller.h
DesktopApp/include/gui/: component_library.h  console_panel.h  debug_panel.h  logic_analyzer.h  main_window.h  oscilloscope.h  pinout_panel.h  properties_panel.h  workspace.h
DesktopApp/include/network/: ble_simulator.h  wifi_simulator.h
DesktopApp/include/peripherals/: adc_controller.h  dac_controller.h  gpio_controller.h  i2c_controller.h  ledc_controller.h  spi_controller.h  uart_controller.h
DesktopApp/include/utils/: logger.h
DesktopApp/include/virtual_components/: button_component.h  component_base.h  led_component.h
DesktopApp/resources/: resources.qrc
DesktopApp/src/core/: application.cpp  elf_loader_wrapper.cpp  main.cpp  simulation_engine.cpp
DesktopApp/src/debug/: debug_controller.cpp
DesktopApp/src/gui/: component_library.cpp  console_panel.cpp  debug_panel.cpp  logic_analyzer.cpp  main_window.cpp  oscilloscope.cpp  pinout_panel.cpp  properties_panel.cpp  workspace.cpp
DesktopApp/src/network/: ble_simulator.cpp  wifi_simulator.cpp
DesktopApp/src/peripherals/: adc_controller.cpp  dac_controller.cpp  gpio_controller.cpp  i2c_controller.cpp  ledc_controller.cpp  spi_controller.cpp  uart_controller.cpp
DesktopApp/src/utils/: logger.cpp
DesktopApp/src/virtual_components/: button_component.cpp  led_component.cpp
DesktopApp/tests/: test_simulation.cpp
bootloader/: bootloader.c  bootloader.h
gpio/: gpio_hal.c  gpio_hal.h
http/: http_server.c  http_server.h
interrupt/: interrupt_handler.c  interrupt_handler.h
linker/: esp32_small_os.ld
main/: CMakeLists.txt  activity_manager.c  activity_manager.h  auth.c  auth.h  gpio_manager.c  gpio_manager.h  main.c  network_manager.c  network_manager.h  realtime_monitor.c  realtime_monitor.h  scheduler.c  scheduler.h  scheduler_patch.txt  small_os.c  small_os.h  storage.c  storage.h  web_server.c  web_server.h  web_view_manager.c  web_view_manager.h
memory/: memory_map.h  memory_pool.c  memory_pool.h
network/: wifi_manager.c  wifi_manager.h
scheduler/: task_scheduler.c  task_scheduler.h
security/: auth.c  auth.h
sim/: Makefile  README.md  compile_and_run.bat  run_simulation.bat  sim_esp32.h  sim_main.c  sim_runner.c  simple_test.c  test_simulation.sh
simulator/: CMakeLists.txt  ESP32_SIMULATOR_DEMO.bat  INSTALLATION_GUIDE.md  README.md  RUN_SIMULATOR.md  SIMULATOR_STATUS.md  bash.exe.stackdump  build_simulator.bat  build_simulator.sh  console_simulator.cpp  demo.cpp  main.cpp  run.bat  run_simple.bat  simple_simulator.cpp
simulator/core/elf_loader/: elf_loader.cpp  elf_loader.h
simulator/core/iss/: xtensa_iss.cpp  xtensa_iss.h
simulator/core/memory/: memory_model.cpp  memory_model.h
simulator/core/scheduler/: event_scheduler.cpp  event_scheduler.h
simulator/gui/: logic_analyzer_widget.cpp  logic_analyzer_widget.h  main_window.cpp  main_window.h  pinout_panel.cpp  pinout_panel.h  simulation_control_widget.cpp  simulation_control_widget.h  status_widget.cpp  status_widget.h  workspace_widget.cpp  workspace_widget.h
simulator/peripherals/gpio/: gpio_model.cpp  gpio_model.h
storage/: nvs_storage.c  nvs_storage.h
utils/: logger.c  logger.h
